[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ddat-gpf/runtime/state_title/title_menus/title_main/title_main.gd" type="Script" id=1]
[ext_resource path="res://src/ddat-gpf/runtime/state_title/title_menus/title_menu_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ddat-gpf/runtime/state_title/title_menus/title_main/style_preset_panel_title_main_button_background.tres" type="StyleBox" id=3]
[ext_resource path="res://src/ddat-gpf/runtime/state_title/title_menus/title_main/anim_opening_first_open.tres" type="Animation" id=4]

[node name="MenuTitleMain" type="Control"]
margin_left = -960.0
margin_right = 960.0
margin_bottom = 1080.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Main" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Left" type="MarginContainer" parent="Main"]
margin_right = 618.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 75
custom_constants/margin_top = 75
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75

[node name="Panel" type="Panel" parent="Main/Left"]
margin_left = 75.0
margin_top = 75.0
margin_right = 543.0
margin_bottom = 1005.0
mouse_filter = 2
custom_styles/panel = ExtResource( 3 )

[node name="ButtonMargin" type="MarginContainer" parent="Main/Left"]
margin_left = 75.0
margin_top = 75.0
margin_right = 543.0
margin_bottom = 1005.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 25
custom_constants/margin_left = 15
custom_constants/margin_bottom = 75

[node name="ButtonContainer" type="VBoxContainer" parent="Main/Left/ButtonMargin"]
margin_left = 15.0
margin_top = 159.0
margin_right = 418.0
margin_bottom = 855.0
mouse_filter = 2
size_flags_vertical = 14
custom_constants/separation = 24

[node name="StartGame" parent="Main/Left/ButtonMargin/ButtonContainer" instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 403.0
margin_bottom = 120.0
text = "START GAME"

[node name="ToConfigMenu" parent="Main/Left/ButtonMargin/ButtonContainer" instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 144.0
margin_right = 403.0
margin_bottom = 264.0
text = "OPTIONS"
my_title_button_id = 1

[node name="ToControlsMenu" parent="Main/Left/ButtonMargin/ButtonContainer" instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 288.0
margin_right = 403.0
margin_bottom = 408.0
text = "CONTROLS"
my_title_button_id = 2

[node name="ToAboutMenu" parent="Main/Left/ButtonMargin/ButtonContainer" instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 432.0
margin_right = 403.0
margin_bottom = 552.0
text = "ABOUT"
my_title_button_id = 2

[node name="ExitGame" parent="Main/Left/ButtonMargin/ButtonContainer" instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 576.0
margin_right = 403.0
margin_bottom = 696.0
text = "EXIT GAME"
my_title_button_id = 3

[node name="Right" type="VBoxContainer" parent="Main"]
margin_left = 622.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.1
custom_constants/separation = 15

[node name="MainBlock" type="MarginContainer" parent="Main/Right"]
visible = false
margin_right = 1298.0
margin_bottom = 968.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_constants/margin_right = 25
custom_constants/margin_top = 50
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="BottomBarExclusion" type="MarginContainer" parent="Main/Right"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1298.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 11
size_flags_vertical = 11
size_flags_stretch_ratio = 0.5
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="AnimationPlayer_Opening" type="AnimationPlayer" parent="."]
anims/first_open = ExtResource( 4 )

[connection signal="main_window_last_focused_button" from="Main/Left/ButtonMargin/ButtonContainer/StartGame" to="." method="update_last_focused_button"]
[connection signal="main_window_last_focused_button" from="Main/Left/ButtonMargin/ButtonContainer/ToConfigMenu" to="." method="update_last_focused_button"]
[connection signal="main_window_last_focused_button" from="Main/Left/ButtonMargin/ButtonContainer/ToAboutMenu" to="." method="update_last_focused_button"]
[connection signal="main_window_last_focused_button" from="Main/Left/ButtonMargin/ButtonContainer/ExitGame" to="." method="update_last_focused_button"]
[connection signal="animation_finished" from="AnimationPlayer_Opening" to="." method="open_animation_finished"]
